Novo comentário adicionado

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     </section>
 
     <!-- Contato -->
+     <!--Novo Comentário-->
     <section id="contact" class="section">
         <div class="logo-container">
             <i class="fas fa-music fa-5x"></i> <!-- Ícone substituto para a logo -->
