--- a/index.html
+++ b/index.html
@@ -82,7 +82,13 @@
     </section>
 
     <footer>
+        <div class="footer-section">
+            <h4>Endereço</h4>
+            <p>R. Tito, 54 - Vila Romana, São Paulo - SP</p>
+        </div>
+
         <p>&copy; 2024 Escola de Música. Todos os direitos reservados.</p>
+    </div>
     </footer>
 
     <script src="script.js"></script>
