--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
         <div class="loader"></div>
     </div>
 
+    <!-- Barra de Navegação -->
+    <nav id="navbar">
+        <div class="navbar-wrapper">
+            <ul>
+                <li><a href="#about" class="nav-link">Sobre</a></li>
+                <li><a href="#courses" class="nav-link">Cursos</a></li>
+                <li><a href="#testimonials" class="nav-link">Depoimentos</a></li>
+                <li><a href="#contact" class="nav-link">Contato</a></li>
+            </ul>
+            <a href="https://wa.me/SEUNUMERO" class="contact-btn"><i class="fab fa-whatsapp"></i> Contato</a>
+        </div>
+    </nav>
+
     <!-- Bloco Inicial -->
     <div class="hero">
         <video autoplay muted loop id="bg-video">
@@ -28,18 +41,7 @@
         <p>Sua escola de música no bairro da Lapa</p>
     </div>
 
-    <!-- Barra de Navegação -->
-    <nav id="navbar">
-        <div class="navbar-wrapper">
-            <ul>
-                <li><a href="#about" class="nav-link">Sobre</a></li>
-                <li><a href="#courses" class="nav-link">Cursos</a></li>
-                <li><a href="#testimonials" class="nav-link">Depoimentos</a></li>
-                <li><a href="#contact" class="nav-link">Contato</a></li>
-            </ul>
-            <a href="https://wa.me/SEUNUMERO" class="contact-btn"><i class="fab fa-whatsapp"></i> Contato</a>
-        </div>
-    </nav>
+    
 
     <!-- Seção Sobre -->
     <section id="about" class="section">
@@ -84,7 +86,7 @@
     <footer>
         <div class="footer-section">
             <h4>Endereço</h4>
-            <p>R. Tito, 54 - Vila Romana, São Paulo - SP</p>
+            <p>R. Fábia, 805-731 - Vila Romana</p>
         </div>
 
         <p>&copy; 2024 Escola de Música. Todos os direitos reservados.</p>
